# fizz-rs

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  Cargo.toml  README.md  README_SIDECAR.md  build.rs  generate_certificate.sh  rust-toolchain.toml
cmake/: FindSodium.cmake
components_doc/: client.md  server.md  sidecar.md
cxx_docs/: 00_overview.md  01_modules.md  02_string_types.md  03_smart_pointers.md  04_vector_types.md  05_traits_and_extern_types.md  06_exception_handling.md  07_bridge_macro.md  README.md
cxx_usage/: 01_getting_started.md  02_writing_cpp_for_rust.md  03_async_interop.md  04_build_integration.md  05_advanced_patterns.md  README.md
demo/fizz-rs/: Cargo.toml
demo/fizz-rs/src/: client.rs  server.rs
demo/fizz-sidecar/: .gitignore  BUILD.bazel  MODULE.bazel  bazel-bin  bazel-fizz-sidecar  bazel-out  bazel-testlogs  format.sh
demo/fizz-sidecar/sidecar/: BUILD.bazel  credential.cc  credential.h  crypto_utils.cc  crypto_utils.h  files.cc  files.h  main.cc
examples/: generate_credential.rs
fizz_rs/: Cargo.toml  build.rs
fizz_rs/examples/: generate_credential.rs
fizz_rs/src/: bridge.rs  client_tls.rs  io.rs  lib.rs  server_tls.rs  types.rs
fizz_rs/src/ffi/: bridge_decl.h  certificates_ffi.cpp  client_tls_ffi.cpp  client_tls_ffi.h  credentials_ffi.h  server_tls_ffi.cpp  server_tls_ffi.h
include/: CredentialManager.h  HTTPServer.h  TLSClient.h  TLSServer.h
src/: async_context.rs  certificates.rs  credentials.rs  error.rs  lib.rs  server_tls.rs  types.rs
src/client/: TLSClient.cpp  main.cpp
src/ffi/: certificates_ffi.h  client_tls_ffi.cpp  client_tls_ffi.h  credentials_ffi.cpp  server_tls_ffi.cpp
src/server/: TLSServer.cpp  main.cpp
src/sidecar/: CredentialManager.cpp  HTTPServer.cpp  generate_sidecar_cert.cpp  main.cpp
text_docs/: rfc_9345.md
