module(
    name = "fiz__example",
    version = "0.0.1",
)

#bazel_dep(name = "glog", version = "0.7.1")
bazel_dep(name = "rules_cc", version = "0.2.16")
bazel_dep(name = "fizz", version = "2025.02.10.00", repo_name = "fizz")
bazel_dep(name = "nlohmann_json", version = "3.12.0", repo_name = "nlohmann_json")
